Fixed overflow issue with parent element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,6 +576,7 @@ span.bars {
     width: 100%;
     height: 1200px;
     position: absolute;
+    overflow: hidden;
     z-index: -1;
     top: 850px;
 }
@@ -654,6 +655,7 @@ span.bars {
 .food-and-prices {
     width: 100%;
     height: 100%;
+    position: absolute;
 }
 
 .food-left {
@@ -661,13 +663,24 @@ span.bars {
     height: 33%;
     float: left;
     background: red;
+    list-style-type: none;
+    color: black;
+}
+
+.food-left ul > li {
+    list-style-type: none;
 }
 
 .prices-right {
+    color: black;
     width: 15%;
     height: 33%;
     float: right;
     background: white;
+}
+
+.prices-right ul > li {
+    list-style-type: none;
 }
 
 /* food menu logo on left */
@@ -693,6 +706,15 @@ span.bars {
     color: #F79F24;
     top: 300px;
     background-color: red;
+}
+
+.menu-headings {
+    position: absolute;
+}
+/* food container one */
+.fp-one {
+    position: absolute;
+    transform: translateY(325px);
 }
 
 /* gallery page */
